--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/johnb/eclipse-workspace-java/fungraphics_1.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
